tests/testcases/errors/BCE0018-2.boo
"""
BCE0018-2.boo(10,6): BCE0018: The name 'System.Tipe' does not denote a valid type. Did you mean 'System.Type' ?
BCE0018-2.boo(11,6): BCE0018: The name 'System.Diagnostics.Processs' does not denote a valid type. Did you mean 'System.Diagnostics.Process' ?
BCE0018-2.boo(12,6): BCE0018: The name 'System.Collection.ArrayList' does not denote a valid type. Did you mean 'System.Collections.ArrayList' ?
BCE0018-2.boo(13,6): BCE0018: The name 'System.Runtim.InterpService.Criticalhandle' does not denote a valid type. Did you mean 'System.Runtime.InteropServices.CriticalHandle' ?
BCE0018-2.boo(14,13): BCE0018: The name 'System.Nonsense' does not denote a valid type. 
BCE0018-2.boo(15,6): BCE0018: The name 'IQuackfoo' does not denote a valid type. Did you mean 'Boo.Lang.IQuackFu' ?
BCE0018-2.boo(16,7): BCE0018: The name 'DllImportAttribute' does not denote a valid type. Did you mean 'System.Runtime.InteropServices.DllImportAttribute' ?
"""
t as System.Tipe
p as System.Diagnostics.Processs
a as System.Collection.ArrayList
h as System.Runtim.InterpService.Criticalhandle
nonsense as System.Nonsense
q as IQuackfoo
ni as DllImportAttribute #valid type from a referenced assembly but out of resolution scope
